# code-concatenated-quantum-repeater

./: .gitignore  README.md  determine_reencoding_error_probability.py  requirements.txt
effective_error_probability/: CMakeLists.txt
effective_error_probability/include/: AuxMath.hpp  BinaryData.hpp  FiveQubitCode.hpp  fpauli.hpp  npauli.hpp
effective_error_probability/src/: AuxMath.cpp  FiveQubitCode.cpp  FiveQubitCode_aux.cpp  FiveQubitCode_flag.cpp  FiveQubitCode_loss.cpp  fpauli.cpp  main.cpp  npauli.cpp
secret_key_rate/: CMakeLists.txt  post_processing.nb  process-csv.ps1
secret_key_rate/include/: Repeater.hpp  Tree.hpp
secret_key_rate/src/: Repeater.cpp  Tree.cpp  main.cpp
secret_key_rate/tex/21_points_88ed70e9/L0_kappa0002/: L0_reencodingError0.0001_kappa0002.csv  L0_reencodingError0.0003_kappa0002.csv  L0_reencodingError0.0005_kappa0002.csv  L0_reencodingError0.001_kappa0002.csv  L0_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/SKR_kappa0002/: SKR_reencodingError0.0001_kappa0002.csv  SKR_reencodingError0.0003_kappa0002.csv  SKR_reencodingError0.0005_kappa0002.csv  SKR_reencodingError0.001_kappa0002.csv  SKR_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/cost_kappa0002/: cost_reencodingError0.0001_kappa0002.csv  cost_reencodingError0.0003_kappa0002.csv  cost_reencodingError0.0005_kappa0002.csv  cost_reencodingError0.001_kappa0002.csv  cost_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/mII-to-mI_kappa0002/: mII-to-mI-ratio_reencodingError0.0001_kappa0002.csv  mII-to-mI-ratio_reencodingError0.0003_kappa0002.csv  mII-to-mI-ratio_reencodingError0.0005_kappa0002.csv  mII-to-mI-ratio_reencodingError0.001_kappa0002.csv  mII-to-mI-ratio_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/mII_kappa0002/: mII_reencodingError0.0001_kappa0002.csv  mII_reencodingError0.0003_kappa0002.csv  mII_reencodingError0.0005_kappa0002.csv  mII_reencodingError0.001_kappa0002.csv  mII_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/mI_kappa0002/: mI_reencodingError0.0001_kappa0002.csv  mI_reencodingError0.0003_kappa0002.csv  mI_reencodingError0.0005_kappa0002.csv  mI_reencodingError0.001_kappa0002.csv  mI_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/ntot_kappa0002/: ntot_reencodingError0.0001_kappa0002.csv  ntot_reencodingError0.0003_kappa0002.csv  ntot_reencodingError0.0005_kappa0002.csv  ntot_reencodingError0.001_kappa0002.csv  ntot_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_88ed70e9/treeVecs_kappa0002/: treeVecs_reencodingError0.0001_kappa0002.csv  treeVecs_reencodingError0.0003_kappa0002.csv  treeVecs_reencodingError0.0005_kappa0002.csv  treeVecs_reencodingError0.001_kappa0002.csv  treeVecs_reencodingError0.002_kappa0002.csv
secret_key_rate/tex/21_points_9b98c5d0/L0_kappa0001_full_typeII/: L0_reencodingError0.0001_kappa0001_full_typeII.csv  L0_reencodingError0.0003_kappa0001_full_typeII.csv  L0_reencodingError0.0005_kappa0001_full_typeII.csv  L0_reencodingError0.001_kappa0001_full_typeII.csv  L0_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/SKR_kappa0001_full_typeII/: SKR_reencodingError0.0001_kappa0001_full_typeII.csv  SKR_reencodingError0.0003_kappa0001_full_typeII.csv  SKR_reencodingError0.0005_kappa0001_full_typeII.csv  SKR_reencodingError0.001_kappa0001_full_typeII.csv  SKR_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/cost_kappa0001_full_typeII/: cost_reencodingError0.0001_kappa0001_full_typeII.csv  cost_reencodingError0.0003_kappa0001_full_typeII.csv  cost_reencodingError0.0005_kappa0001_full_typeII.csv  cost_reencodingError0.001_kappa0001_full_typeII.csv  cost_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/mII-to-mI_kappa0001_full_typeII/: mII-to-mI-ratio_reencodingError0.0001_kappa0001_full_typeII.csv  mII-to-mI-ratio_reencodingError0.0005_kappa0001_full_typeII.csv  mII-to-mI-ratio_reencodingError0.001_kappa0001_full_typeII.csv  mII-to-mI-ratio_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/mII_kappa0001_full_typeII/: mII_reencodingError0.0001_kappa0001_full_typeII.csv  mII_reencodingError0.0003_kappa0001_full_typeII.csv  mII_reencodingError0.0005_kappa0001_full_typeII.csv  mII_reencodingError0.001_kappa0001_full_typeII.csv  mII_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/mI_kappa0001_full_typeII/: mI_reencodingError0.0003_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/ntot_kappa0001_full_typeII/: ntot_reencodingError0.0001_kappa0001_full_typeII.csv  ntot_reencodingError0.0003_kappa0001_full_typeII.csv  ntot_reencodingError0.0005_kappa0001_full_typeII.csv  ntot_reencodingError0.001_kappa0001_full_typeII.csv  ntot_reencodingError0.002_kappa0001_full_typeII.csv
secret_key_rate/tex/21_points_9b98c5d0/treeVecs_kappa0001_full_typeII/: treeVecs_reencodingError0.001_kappa0001_full_typeII.csv  (+3 more)
secret_key_rate/tex/21_points_homogeneous/: homogeneous_SKR_reencodingError0.0001.csv  homogeneous_SKR_reencodingError0.0003.csv  homogeneous_SKR_reencodingError0.0005.csv  homogeneous_SKR_reencodingError0.001.csv  homogeneous_SKR_reencodingError0.002.csv  homogeneous_cost_reencodingError0.0001.csv  homogeneous_cost_reencodingError0.0003.csv  homogeneous_cost_reencodingError0.0005.csv  homogeneous_cost_reencodingError0.001.csv  homogeneous_cost_reencodingError0.002.csv
(+162 files in other folders)
